[package]
name = "rust_digital_garden"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
assert_cmd = "2.0.10"
color-eyre = "0.6.2"
structopt = "0.3.26"
tokio = "1.27.0"
